# glider

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yaml  flake.nix
glider-backend/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
glider-backend/glider/: config.py  entrypoint_api.py  entrypoint_worker.py
glider-backend/glider/api/: __init__.py  workflows.py
glider-backend/glider/integrations/: google_calendar.py  spotify.py
glider-backend/glider/scripts/: create_calendar_schedule.py  create_oura_schedule.py
glider-backend/glider/workflows/: demo.py  google_calendar.py  oura.py  spotify.py
glider-frontend/: README.md  package-lock.json  package.json  vite.config.ts
glider-frontend/src/: App.tsx  index.tsx
glider-frontend/src/components/: Block.tsx  Breadcrumbs.tsx  Outline.tsx
glider-frontend/src/pages/: Demo.tsx
glider-frontend/src/store/: outlineStore.ts
glider-frontend/src/types/: outline.ts
glider-frontend2/: Dockerfile  package-lock.json  package.json
glider-frontend2/src/routes/: +page.svelte
glider-operator/: Dockerfile  config.toml  pyproject.toml
glider-operator/glider/: __init__.py  config.py  entrypoint_worker.py  logging_setup.py  scheduler.py
glider-web/: Dockerfile  package-lock.json  package.json
nix/: module.nix
specs/: architectural_buildup.md  gcal_spotify_integration.md  glider_outliner.md  migration_off_of_temporal.md  migration_off_of_temporal_plan.md  phase1.md
specs/research/: your_spotify-oauth-authentication-analysis.md  your_spotify-spotify-scrobbling-analysis.md
(+46 files in other folders)
