[project]
name = "glider-backend"
version = "0.1.0"
description = "Glider Backend API and Workers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "temporalio>=1.7.0",
    "pydantic-settings>=2.0.0",
    "surrealdb>=0.3.0",
    "google-api-python-client>=2.100.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "ty>=0.0.1a7",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
python-version = "3.13"
